<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2</name>
  <version>3.0.0</version>

  <description>ROS2 Planning System</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>

  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_bt_actions</exec_depend>
  <exec_depend>plansys2_core</exec_depend>
  <exec_depend>plansys2_domain_expert</exec_depend>
  <exec_depend>plansys2_executor</exec_depend>
  <exec_depend>plansys2_lifecycle_manager</exec_depend>
  <exec_depend>plansys2_msgs</exec_depend>
  <exec_depend>plansys2_pddl_parser</exec_depend>
  <exec_depend>plansys2_planner</exec_depend>
  <exec_depend>plansys2_popf_plan_solver</exec_depend>
  <exec_depend>plansys2_problem_expert</exec_depend>
  <exec_depend>plansys2_support_py</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>
  <exec_depend>plansys2_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
