<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_tests</name>
  <version>3.0.1</version>

  <description>This package contains the tests package for the ROS2 Planning System</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>

  <exec_depend>popf</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>plansys2_domain_expert</test_depend>
  <test_depend>plansys2_problem_expert</test_depend>
  <test_depend>plansys2_planner</test_depend>
  <test_depend>plansys2_pddl_parser</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
